--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "buffer": "^6.0.3",
+    "cors-anywhere": "^0.4.4",
     "crypto-browserify": "^3.12.0",
+    "http-proxy-middleware": "^2.0.6",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "stripe": "^14.13.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
